main:last fixes for front
