# app/Http/Requests/Api/V1/Auth/UpdateMeRequest.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Requests\Api\V1\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class UpdateMeRequest extends FormRequest
+{
+
+    /**
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * @return array
+     */
+    public function rules(): array
+    {
+        return [
+            'name'  => 'nullable|string|max:100',
+            'phone' => 'nullable|string|max:30',
+        ];
+    }
+}
