# app/Http/Requests/Api/V1/Owner/AnalyticsRequest.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Http\Requests\Api\V1\Owner;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class AnalyticsRequest extends FormRequest
+{
+
+    /**
+     * @return bool
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * @return array
+     */
+    public function rules(): array
+    {
+        return [
+            'period' => 'nullable|string|in:week,month,year',
+        ];
+    }
+}
