# routes/api/v1/auth.php
@@ -15,5 +15,7 @@ Route::prefix('auth')->group(function () {
     Route::middleware('auth:sanctum')->group(function () {
         Route::post('/logout', [AuthController::class, 'logout']);
         Route::get('/me', [AuthController::class, 'me']);
+        Route::put('/me', [AuthController::class, 'updateMe']);
+        Route::get('/me/reviews', [AuthController::class, 'myReviews']);
     });
 });
